// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/custom_status/custom_status_text should match snapshot 1`] = `
<CustomStatusText
  className=""
  text=""
  tooltipDirection="bottom"
/>
`;

exports[`components/custom_status/custom_status_text should match snapshot with props 1`] = `
<CustomStatusText
  className=""
  text="In a meeting"
  tooltipDirection="top"
/>
`;
